New in 6.2.1 version:

  * Spin-polarized SCAN meta-GGA; spin-unpolarized stress for meta-GGA
    (Hsin-Yu Ho and Marcos Calegari Andrade)

  * Interface with Grimme's DFT-D3, as repackaged by Bálint Aradi
    (Miha Gunde and Layla Martins-Samos)
  
  * Phonons for two-dimensional systems (Thibault Sohier et al.)

Problems fixed in 6.2.1 version:

  * Restart in phonon wasn't working with tetrahedra (r14029)
    and for USPP/PAW at q != 0 (r14034)

  * QM-MM interface with LAMMPS was broken in v.6.2 (r14006-14008)

  * NASTY BUG IN META-GGA WITH LIBXC (tpss, tb09, scan): incorrect results -
    fixed by Hsin-Yu Ho and Marcos Calegari Andrade (r14000, 14004-5, 14027)

  * Electron-phonon with ibrav=0 not working due to a mismatch between
    what is written and what is read in "fildyn" (r13999)

  * Tetrahedra with "old" XML format working again (r13993)

  * Option "-in file" for fermi_proj.x and fermi_velocity.x was not working
    in serial execution; fermisurfer_example/ was missing (r13986). Also:
    Fermi velocity in vfermi.frmsf was 4*celldm(1) times bigger than in
    fermisurfer (reported by Victor Chang, fixed by Mitsuaki Kawamura, r14033)

  * Inconsistent "short name" for DFT was breaking Perdew-Wang pseudopotentials
    (r13975)

  * Yet another problem with last scf step in vc-relax, present since v.6.1: 
    if no atoms of a given kind were present, there was a division by zero
    and a NaN in starting magnetization (reported by Malte Sachs) (r13971)

  * FFT's for ARM libraries were broken (r13956,13959, courtesy Jason Wood)

Known problems in 6.2.1 version:

  * QM-MM not yet working

  * New format for charge density no longer allows to perform a non-scf
    calculation with k-points starting from a scf calculation at Gamma

  * NEB with one k-point per pool requires "wf_collect=.false.", because
    update_neb is not updated for the new format

Incompatible changes in 6.2.1 version:
