@@ -24,6 +24,7 @@ SUBROUTINE run_driver ( srvaddress, exit_status )
   USE ener,             ONLY : etot
   USE f90sockets,       ONLY : readbuffer, writebuffer
   USE extrapolation,    ONLY : update_file, update_pot
+  USE io_files,         ONLY : iunupdate, nd_nmbr, prefix, tmp_dir, wfc_dir, delete_if_present, seqopn
   !
   IMPLICIT NONE
   INTEGER, INTENT(OUT) :: exit_status
@@ -184,7 +185,7 @@ CONTAINS
        ! ... see lgreset below
        !
        IF ( ionode ) write(*,*) " @ DRIVER MODE: Resetting scf history "
-       CALL close_files(.TRUE.)
+       CALL reset_history_for_extrapolation()
     END IF
     !
     rid_old = rid
@@ -340,7 +341,7 @@ CONTAINS
     ! ... Reset the history
     !
     CALL clean_pw( .FALSE. )
-    IF ( .NOT. firststep) CALL close_files(.TRUE.)
+    IF ( .NOT. firststep) CALL reset_history_for_extrapolation()
     !
     CALL init_run()
     !
@@ -355,6 +356,38 @@ CONTAINS
     !
   END SUBROUTINE initialize_g_vectors
   !
+  SUBROUTINE reset_history_for_extrapolation()
+    !
+    ! ... Resets history of wavefunction and rho as if the
+    ! ... previous step was the first one in the calculation.
+    ! ... To this end, files with rho and wfc from previous steps
+    ! ... must be deleted, and iunupdate unit wiped. The latter
+    ! ... is achieved by deleting the file and recreating it using
+    ! ... update_file() routine.
+    !
+    IMPLICIT NONE
+    LOGICAL :: exst
+    !
+    ! ... Delete history files, names correspond to the ones
+    ! ... in the update_pot() routine.
+    !
+    CALL delete_if_present(TRIM( wfc_dir ) // TRIM( prefix ) // '.oldwfc' // nd_nmbr)
+    CALL delete_if_present(TRIM( wfc_dir ) // TRIM( prefix ) // '.old2wfc' // nd_nmbr)
+    IF ( ionode ) THEN
+       CALL delete_if_present(TRIM( tmp_dir ) // TRIM( prefix ) // '.save/' // 'charge-density.old.dat')
+       CALL delete_if_present(TRIM( tmp_dir ) // TRIM( prefix ) // '.save/' // 'charge-density.old2.dat')
+       !
+       ! ... The easiest way to wipe the iunupdate unit, is to delete it
+       ! ... and run update_file(), which will recreate the file
+       !
+       CALL seqopn( iunupdate, 'update', 'FORMATTED', exst )
+       CLOSE(UNIT=iunupdate, STATUS='DELETE')
+    END IF
+    !
+    CALL update_file()
+    !
+  END SUBROUTINE
+!
 END SUBROUTINE run_driver
 
 FUNCTION get_server_address ( command_line ) RESULT ( srvaddress )
